@@ -45,7 +45,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation("org.springframework.boot:spring-boot-starter-webflux")
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0"
 
     implementation "org.flywaydb:flyway-core:$flywayVersion"
     implementation "org.flywaydb:flyway-mysql:$flywayVersion"
@@ -56,9 +56,7 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
 
-//    implementation platform("software.amazon.awssdk:bom:$awsSdkVersion")
-//    implementation "software.amazon.awssdk:s3"
-    implementation 'io.minio:minio:8.5.7'
+    implementation "io.minio:minio:8.5.7"
 
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
@@ -69,13 +67,53 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
     testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation platform('org.testcontainers:testcontainers-bom:1.19.8')
+
+    testImplementation 'org.testcontainers:testcontainers'
+    testImplementation 'org.testcontainers:mysql'
+    testImplementation 'org.testcontainers:junit-jupiter'
+
+    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
+    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
+
+    systemProperties = [
+            'DOCKER_HOST': 'tcp://localhost:2375',
+            'docker.host': 'tcp://localhost:2375',
+            'docker.tls.verify': 'false',
+            'testcontainers.reuse.enable': 'true'
+    ]
+
+    jvmArgs = [
+            '-XX:+EnableDynamicAgentLoading',
+            '-Dspring.profiles.active=test'
+    ]
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
 }
+
+tasks.register('cleanTestContainers', Exec) {
+    commandLine 'docker', 'ps', '-aq', '--filter', 'name=testcontainers-*'
+    standardOutput = new ByteArrayOutputStream()
+    doLast {
+        def containerIds = standardOutput.toString().trim()
+        if (containerIds) {
+            exec {
+                commandLine 'docker', 'rm', '-f', *containerIds.split('\n')
+            }
+        }
+    }
+}
+
+test.finalizedBy cleanTestContainers
